2008-01-10  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* modulesets/bootstrap.modules: Update to Python 2.4.4
	instead of 2.4.3 in the bootstrap moduleset.

2008-01-10  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-2.22.modules:
	Added WebKit. Grabbed from svn (260+ MB), compiled using
	autotools, you will need some external libs in order to compile.
	See the comments before the module definition for the list and
	to know what to do if you tried to build without those stuff.

	Note: I've enabled the --enable-video and --enable-svg
	configure switch. Both are experimental, but WebKitGtk is
	all experimental, so... The --enable-video requires 
	gst-plugins-base and will support the <video> HTML5 tag.

2008-01-08  Andre Klapper  <a9016009@gmx.de>

	* modulesets/gnome-external-deps-2.22.modules:
	revert addition of mozilla flag.

2008-01-08  Andre Klapper  <a9016009@gmx.de>

	* modulesets/gnome-external-deps-2.22.modules:
	Bump D-Bus from 1.0.2 to 1.1.2 as discussed within r-t.

2008-01-08  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* modulesets/gnome-suites-2.20.modules: GConf has
	branched for gnome-2-20.

2008-01-08  Frederic Peters  <fpeters@0d.be>

	* jhbuild/utils/notify.py: let notify-send silently switch to disabled
	mode on errors.  (closes: #508055)

2008-01-08  Christian Persch  <chpe@gnome.org>

	* modulesets/gnome-2.18.modules: Use the gnome-2-16 branch for
	gucharmap in 2.18.

2008-01-08  Christian Persch  <chpe@gnome.org>

	* modulesets/gnome-suites-2.22.modules: Use gnome-2-22 branch for
	gucharmap.

2008-01-08  Frederic Peters  <fpeters@0d.be>

	* jhbuild/frontends/terminal.py: catch exceptions around ncurses call
	to setup terminal.

2008-01-07  Behdad Esfahbod  <behdad@gnome.org>

	* modulesets/gnome-2.18.modules: Use gnome-2-20 branch for
	gnome-terminal.

2008-01-07  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-suites-2.22.modules: adjusted devhelp deps:
	removed libgnomeui and gnome-vfs and added gtk+, libglade, gconf