@@ -1,3 +1,11 @@
+2008-01-10  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/commands/rdepends.py: added a rdepends command, to show
+	reverse dependency information for a module; it has two possible
+	options: --dependencies to display dependency path next to modules,
+	and --direct to limit display to modules directly depending on the
+	given module.  (closes: #508289)
+
 2008-01-10  Wouter Bolsterlee  <wbolster@svn.gnome.org>
 
 	* modulesets/bootstrap.modules: Update to Python 2.4.4
